# replace-files-with-itself

./: Cargo.toml  README.MD
src/: main.rs
